--- a/templates/admin/pages/index.html
+++ b/templates/admin/pages/index.html
@@ -53,7 +53,7 @@
                             </a>
 
 
-                            <a href="#" onclick="delete({{ user.id }})" class="inline-block px-3 py-3 mr-3 font-bold text-center uppercase align-middle rounded-lg cursor-pointer text-white bg-[#f5365c] leading-normal text-xs ease-in tracking-tight-rem shadow-md bg-x-25 hover:-translate-y-px active:opacity-85 hover:shadow-md">
+                            <a href="#" onclick="delete(#)" class="inline-block px-3 py-3 mr-3 font-bold text-center uppercase align-middle rounded-lg cursor-pointer text-white bg-[#f5365c] leading-normal text-xs ease-in tracking-tight-rem shadow-md bg-x-25 hover:-translate-y-px active:opacity-85 hover:shadow-md">
                                <i class="fa fa-trash-o" aria-hidden="true"></i>
                             </a>
 
