--- a/templates/admin/pages/create.html
+++ b/templates/admin/pages/create.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-{% set title = "Page user" %}
+{% set title = "Create page" %}
 {% block content %}
 <div class="w-full max-w-full px-3 shrink-0 md:flex-0">
             <form method="post" id="form" action="{{ url_for('admin.pages.store') }}" class="relative flex flex-col min-w-0 break-words bg-white border-0 shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border">
