--- a/templates/admin/users/index.html
+++ b/templates/admin/users/index.html
@@ -1,94 +1,53 @@
 {% extends 'layout.html' %}
 {% set title = "Users" %}
 {% block content %}
-<div class="flex-none w-full max-w-full px-3">
-    <div class="relative flex flex-col min-w-0 mb-6 break-words bg-white border-0 border-transparent border-solid shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border">
-        <div class="p-6 pb-0 mb-0 border-b-0 border-b-solid rounded-t-2xl border-b-transparent">
-            <div class="flex items-center gap-2">
-                <form method="get" action="{{ url_for('admin.users.index') }}"
-                      class="relative flex flex-wrap items-stretch w-full transition-all rounded-lg ease mr-2">
-    <span class="text-sm ease leading-5.6 absolute z-50 -ml-px flex h-full items-center whitespace-nowrap rounded-lg rounded-tr-none rounded-br-none border border-r-0 border-transparent bg-transparent py-2 px-2.5 text-center font-normal text-slate-500 transition-all">
-      <i class="fa fa-search" aria-hidden="true"></i>
-    </span>
-                    <input type="text" name="query" value="{{ query }}" onchange="this.form.submit()"
-                           class="pl-9 text-sm dark:bg-slate-850 dark:text-white focus:shadow-primary-outline ease w-1/100 leading-5.6 relative -ml-px block min-w-0 flex-auto rounded-lg border border-solid border-gray-300 bg-white bg-clip-padding py-2 pr-3 text-gray-700 transition-all placeholder:text-gray-500 focus:border-blue-500 focus:outline-none focus:transition-shadow"
-                           placeholder="Type here...">
-                </form>
-
-                  <a href="{{ url_for('admin.users.create') }}" class="inline-block px-8 py-2 ml-auto font-bold leading-normal text-center text-white align-middle transition-all ease-in bg-blue-500 border-0 rounded-lg shadow-md cursor-pointer text-xs tracking-tight-rem hover:shadow-xs hover:-translate-y-px active:opacity-85">
-                    Add
-                </a>
-            </div>
-        </div>
-        <div class="flex-auto px-0 pt-0 pb-2">
-            <div class="p-0 overflow-x-auto">
-                {% if users|length > 0 %}
-                <table class="items-center w-full mb-0 align-top border-collapse dark:border-white/40 text-slate-500">
-                    <thead class="align-bottom">
-                    <tr>
-                        <th class="px-6 py-3 font-bold text-left uppercase align-middle bg-transparent border-b border-collapse shadow-none dark:border-white/40 dark:text-white text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">
-                            User
-                        </th>
-                        <th class="px-6 py-3 pl-2 font-bold text-left uppercase align-middle bg-transparent border-b border-collapse shadow-none dark:border-white/40 dark:text-white text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">
-                            Role
-                        </th>
-                        <th class="px-6 py-3 font-bold text-center uppercase align-middle bg-transparent border-b border-collapse shadow-none dark:border-white/40 dark:text-white text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">
-                            Phone
-                        </th>
-                        <th class="px-6 py-3 font-bold text-center uppercase align-middle bg-transparent border-b border-collapse shadow-none dark:border-white/40 dark:text-white text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">
-                            Status
-                        </th>
-                        <th class="px-6 py-3 font-semibold capitalize align-middle bg-transparent border-b border-collapse border-solid shadow-none dark:border-white/40 dark:text-white tracking-none whitespace-nowrap text-slate-400 opacity-70"></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for user in users%}
-
-                    <tr>
-                        <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
-                            <div class="flex px-2 py-1">
-                                <div class="flex flex-col justify-center">
-                                    <h6 class="mb-0 text-sm leading-normal dark:text-white">{{ user.first_name }} {{
-                                        user.last_name }}</h6>
-                                    <p class="mb-0 text-xs leading-tight dark:text-white dark:opacity-80 text-slate-400">
-                                        {{ user.email }}</p>
-                                </div>
-                            </div>
-                        </td>
-                        <td class="p-2 text-sm leading-normal bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
-                            <span class="bg-gradient-to-tl from-emerald-500 to-teal-400 px-2.5 text-xs rounded-1.8 py-1.4 inline-block whitespace-nowrap text-center align-baseline font-bold uppercase leading-none text-white">{{ user.role_label }}</span>
-                        </td>
-                        <td class="p-2 text-center align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
-                            <span class="text-xs font-semibold leading-tight dark:text-white dark:opacity-80 text-slate-400">{{ user.phone_number }}</span>
-                        </td>
-
-                        <td class="p-2 text-center align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
-                            <span class="text-xs font-semibold leading-tight dark:text-white dark:opacity-80 text-slate-400">{{ user.status }}</span>
-                        </td>
-                        <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
-
-                            <a href="{{ url_for('admin.users.edit', id=user.id) }}" class="inline-block px-3 py-3 mr-3 font-bold text-center uppercase align-middle rounded-lg cursor-pointer bg-[#d4d4d8] leading-normal text-xs ease-in tracking-tight-rem shadow-md bg-x-25 hover:-translate-y-px active:opacity-85 hover:shadow-md">
-                               <i class="fa fa-pencil" aria-hidden="true"></i>
-                            </a>
-
-                            {% if request.session['auth_id'] != user.id %}
-                                <a href="#" onclick="deleteUser({{ user.id }})" class="inline-block px-3 py-3 mr-3 font-bold text-center uppercase align-middle rounded-lg cursor-pointer text-white bg-[#f5365c] leading-normal text-xs ease-in tracking-tight-rem shadow-md bg-x-25 hover:-translate-y-px active:opacity-85 hover:shadow-md">
-                                   <i class="fa fa-trash-o" aria-hidden="true"></i>
-                                </a>
-                            {% endif %}
-
-                        </td>
-                    </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-                {% else %}
-                <h6 class="mb-1 mt-1 p-2 text-sm leading-normal dark:text-white">No items can be found.</h6>
-                {% endif %}
-            </div>
+<h2 class="card-title">{{ title }}</h2>
+<form method="get" action="{{ url_for('admin.users.index') }}" class="row">
+    <div class="col-6">
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="query-search"><i class="fa fa-search" aria-hidden="true"></i></span>
+            <input type="text" class="form-control"  name="query" value="{{ query }}" onchange="this.form.submit()"  placeholder="Type here..." aria-describedby="query-search">
         </div>
     </div>
-</div>
+    <div class="col-6 ">
+        <a href="{{ url_for('admin.users.create') }}" class="btn btn-secondary rounded-3 float-end">Add</a>
+    </div>
+</form>
+{% if users|length > 0 %}
+<table class="table">
+<thead>
+    <th class="col">User</th>
+    <th class="col">Email</th>
+    <th class="col">Role</th>
+    <th class="col">Phone</th>
+    <th class="col">Status</th>
+    <th class="col">Actions</th>
+</thead>
+ <tbody>
+    {% for user in users%}
+        <tr>
+            <td>{{ user.first_name }} {{ user.last_name }}</td>
+            <td>{{ user.email }}</td>
+            <td>{{ user.role_label }}</td>
+            <td>{{ user.phone_number }}</td>
+            <td>{{ user.status }}</td>
+            <td>
+                <a class="btn btn-light" href="{{ url_for('admin.users.edit', id=user.id) }}" >
+                     <i class="fa fa-pencil" aria-hidden="true"></i>
+                </a>
+                 {% if request.session['auth_id'] != user.id %}
+                    <a href="#" onclick="deleteUser({{ user.id }})" class="btn btn-danger">
+                       <i class="fa fa-trash-o" aria-hidden="true"></i>
+                    </a>
+                 {% endif %}
+            </td>
+        </tr>
+    {% endfor %}
+ </tbody>
+</table>
+ {% else %}
+                <p class="mb-1 mt-1 p-2 ">No items can be found.</p>
+{% endif %}
 
 <script>
 async function deleteUser(id) {
